fix single img story container alignment

--- a/mthompson/mthompson/assets/css/home.css
+++ b/mthompson/mthompson/assets/css/home.css
@@ -316,6 +316,7 @@ ul {
   height: calc(100% - 20px);
   background: rgba(0, 0, 0, 0.6);
   top: 10px;
+  text-align: center;
 }
 
 .img-story.hidden {
